2023-03-18  Araki Ken  <arakiken@users.sf.net>

	* man/mlterm.1, README.ja, etc/main, etc/main.ja: Updated.

	* ui_sb_factory.[ch]: ui_simple_scrollbar_set_dpr() is added.

	* ui_main_config.c: --sdpr / simple_scrollbar_dpr option is added.

	* motif_data.h, mozmodern_data.h, next_data.h, ui_arrow_data.h:
	  Fix up the appearance.

2023-03-12  Araki Ken  <arakiken@users.sf.net>

	* ui_display_linux.c:
	  - 'ent.kb_value == K_ALTGR' is checked instead of 'ev.code == KEY_RIGHTALT'.
	  - Other minor fixes.

2023-02-26  Araki Ken  <arakiken@users.sf.net>

	* cocoa.m: MLTermView::update always calls [self setNeedsDisplay:YES].

	* ui_screen.c: 'volatile' is added to suppress unexpected optimization
	  by clang 5.1.

2023-02-26  Araki Ken  <arakiken@users.sf.net>

	* vt_term_manager.c: vt_get_detached_term() checks if vt_term_get_master_fd() >= 0.
	  (terminator 2.1.2 segfault in exiting pty without this fix.)

2023-02-25  Araki Ken  <arakiken@users.sf.net>

	* doc/en/README.*, doc/ja/README.*, gtk/README, etc/main, etc/main.ja,
	  man/mlterm.1: Updated.

2023-02-23  Araki Ken  <arakiken@users.sf.net>

	* README: Updated.

	* config.sub, config.guess: Updated.

	* xdg-shell-unstable-v6-client-protocol.[ch],
	  xdg-decoration-unstable-v1-client-protocol.[ch]: Updated.

2023-02-20  Araki Ken  <arakiken@users.sf.net>

	* README: Updated.

	* vt_pty_mosh.cpp:
	  USE_TCP_RECV_FROM_SERVER (mosh-1.4.0 sixel-winsock branch) is defined.

2023-02-19  Araki Ken  <arakiken@users.sf.net>

	* MLTerm.java, MLTermPty.java:
	  'int ch' is added to MLTermPty.writeModifiedKey().

	* MLTermPty.c: 'jint ch' is added to arguments of
	  Java_mlterm_MLTermPty_nativeWriteModifiedKey().

2023-02-18  Araki Ken  <arakiken@users.sf.net>

	* vterm.c: VTERM_CHECK_VERSION2 macro is added.

2023-02-13  Araki Ken  <arakiken@users.sf.net>

	* vterm.c:
	  - vterm_output_set_callback() is added.
	  - Garbage in resizing window is fixed.

2023-02-11  Araki Ken  <arakiken@users.sf.net>
